<resources>
    <string name="app_name">TicTacToe 3D</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="phone_asterisk">Phone number </string>
    <string name="email_asterisk">Email address </string>
    <string name="display_name_asterisk">Display name </string>
    <string name="password_asterisk">Password </string>
    <string name="passcon_asterisk">Confirm Password </string>
    <string name="friend_search_asterisk">Search for a friend</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="display_name">display_name</string>
    <string name="users">users</string>
    <string name="profile_picture">profile_picture</string>
    <string name="status">status</string>
    <string name="token">token</string>
    <string name="friends">friends</string>
    <string name="friend_invites">friend_invites</string>
    <string name="invite_time">invite_time</string>
    <string name="friend_requests">friend_requests</string>
    <string name="request_time">request_time</string>
    <string name="online_users">online_users</string>
    <string name="game_invite">game_invite</string>
    <string name="game_request">game_request</string>
    <string name="active_game">active_game</string>
    <string name="games">games</string>

    <string name="play">Play</string>
    <string name="accept">Accept</string>
    <string name="invite">Invite</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="quit">Quit</string>
    <string name="skip">Skip</string>
    <string name="level">Level</string>
    <string name="confirm">Confirm</string>
    <string name="new_set">New set</string>
    <string name="new_game">New game</string>
    <string name="delete">Delete account</string>

    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="difficult">Difficult</string>

    <string name="moveEntities">moveEntities</string>
    <string name="cross">cross</string>
    <string name="circle">circle</string>
    <string name="winner">winner</string>

    <string name="confirm_quit">Quit game</string>

    <string name="loading">Loading…</string>

    <!--Error handling-->
    <string name="general_error_title">Error</string>
    <string name="general_error">Something went wrong, please try again!</string>

    <string name="no_moves_error_title">No moves</string>
    <string name="no_moves_error">Could not find any moves.</string>

    <!--Tutorial Instructions-->
    <string name="tutorial_welcome">Welcome to Tic Tac Toe in 3D</string>
    <string name="four_to_win">Get 4 in a row to win!!</string>
    <string name="error_prompt">Try again, check the hint.</string>
    <string name="confirm_prompt">Don\'t forget to confirm your moveEntity!</string>
    <string name="first_instruction">Tap the square to make your first moveEntity.</string>
    <string name="second_instruction">Tap again on the highlighted square to confirm.</string>
    <string name="third_instruction">You can also win across grids.</string>
    <string name="fourth_instruction">Look at the grid formation to complete your row.</string>
    <string name="fifth_instruction">Are you sure this moveEntity will complete your row?</string>
    <string name="sixth_instruction">Can you find your winning moveEntity?</string>
    <string name="seventh_instruction">Are you sure this is the winning moveEntity?</string>
    <string name="eighth_instruction">Well done, you have won your first game!!</string>
    <string name="ninth_instruction">Let\'s try to win in a different way.</string>
    <string name="tenth_instruction">Start in the same position.</string>
    <string name="eleventh_instruction">Choose a square a step down or across in the next grid.</string>
    <string name="twelfth_instruction">See if you can find the next step in the next grid.</string>
    <string name="thirteenth_instruction">Find the final square to win.</string>
    <string name="fourteenth_instruction">Well done, you have won your second game!!</string>
    <string name="fifteenth_instruction">Choose a square a step down in all 3 dimensions.</string>
    <string name="sixteenth_instruction">See if you can find the next 3 dimensional moveEntity.</string>
    <string name="seventeenth_instruction">Find the final 3D moveEntity to win!</string>
    <string name="eighteenth_instruction">You have won the game using all 3 dimension in each moveEntity!!!</string>
    <string name="nineteenth_instruction">You are now ready to proceed to play on your own.</string>

    <!--Network-->
    <string name="network_success">success</string>
    <string name="network_error">An error occurred, check the network</string>
    <string name="excessive_requests">Too many requests, please try again later</string>
    <string name="not_logged_in">User not logged in</string>
    <string name="network_restored">Network connection restored</string>
    <string name="network_lost">Network connection lost</string>

    <!--User-profile-->
    <string name="email_exists">This email already exists</string>
    <string name="email_does_not_exists">This email does not exist</string>
    <string name="display_name_exists">Display name exists</string>

    <!--User-profile changes-->
    <string name="change_display_name">Change display name</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="delete_account">Delete account</string>
    <string name="change_display_name_message">Change display name</string>
    <string name="change_password_message">Change password</string>
    <string name="change_email_message">Change email</string>
    <string name="delete_account_message">"Are you sure you would like to delete your account?"</string>

    <!--Confirmation-->
    <string name="delete_msg">Are you sure you want to delete your account</string>
    <string name="quit_msg">Are you sure you want to quit the game</string>

    <!--Game-->
    <string name="game_active">game_active</string>
    <string name="coordinates">coordinates</string>
    <string name="position">position</string>
    <string name="piece_played">piece_played</string>
    <string name="starter">starter</string>
    <string name="me">me</string>
    <string name="opponent">opponent</string>
    <string name="in_progress">in progress</string>
    <string name="game_won">\ has won the game</string>
    <string name="game_title">O\'s and X\'s</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="zero_score">0</string>

    <string name="quit_error">Quit failed, try again.</string>

    <string name="your_turn">Your turn</string>
    <string name="their_turn">Their turn</string>

    <!--Registration-->
    <string name="register_welcome">Welcome to Tic Tac Toe \n in 3D</string>
    <string name="register_message">Please enter an Email and Password to register your an account to play with friends</string>
    <string name="login_message">Please enter your Email and Password to login in</string>
    <string name="login_instead">Login</string>
    <string name="new_user_register">New user? Create account</string>

    <!--Login-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="online">online</string>
    <string name="offline">offline</string>

    <string-array name="menu">
        <item>Home</item>
        <item>Game</item>
        <item>Login</item>
        <item>Profile</item>
        <item>Find friends</item>
    </string-array>
</resources>
