<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/x_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/o_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/o_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/x_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/x_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_score"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/o_button"
        app:layout_constraintBottom_toBottomOf="@id/o_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/x_button"/>

    <TextView
        android:id="@+id/o_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_score"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/o_button"
        app:layout_constraintBottom_toBottomOf="@id/o_button"
        app:layout_constraintStart_toEndOf="@id/o_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>